--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,6 +16,12 @@
         android:theme="@style/Theme.Bid"
         tools:targetApi="33">
         <activity
+            android:name=".playing"
+            android:exported="false" />
+        <activity
+            android:name=".Playing"
+            android:exported="false" />
+        <activity
             android:name=".Settings"
             android:exported="false" />
         <activity
@@ -22,13 +30,12 @@
         <activity
             android:name=".DatabaseRecycler"
             android:exported="false"
-            android:noHistory="true"/>
+            android:noHistory="true" />
         <activity
             android:name=".sellActivity"
             android:exported="false"
             android:label="@string/title_activity_sell"
             android:theme="@style/Theme.Bid.NoActionBar" />
-
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -45,7 +52,16 @@
         </activity>
 
         <receiver android:name=".PostRemoverBroadCast" />
-    </application>
 
+        <service
+            android:name=".PushNotificationReceiveService"
+            android:exported="false"
+            android:permission="com.google.android.c2dm.permission.SEND">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+            </intent-filter>
+        </service>
+    </application>
 
 </manifest>
